--- a/components/nav-bar/nav-bar.module.scss
+++ b/components/nav-bar/nav-bar.module.scss
@@ -5,6 +5,9 @@
 	background-color: $color-brand-primary-light;
 	display: flex;
 
+	box-shadow: 0 1px 4px 0 rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
+		0 2px 10px -1px rgb(0 0 0 / 12%);
+
 	@include bp-lg-mobile-max {
 		align-items: center;
 		justify-content: center;
@@ -61,5 +64,12 @@
 				border-bottom: 5px solid $color-brand-secondary-light;
 			}
 		}
+	}
+
+	.search-text-box {
+		flex-grow: 1;
+		justify-content: center;
+		align-items: center;
+		display: flex;
 	}
 }
