--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -80,3 +80,11 @@ $screen-md-max: ($screen-lg-min - 0.0625);
 $screen-lg-max: ($screen-xl-min - 0.0625);
 
 /*  #endregion */
+
+/* #region Cards */
+$bg-shape-color: linear-gradient(120deg, #343a4f, #0f1620);
+$lightblue: #3d9dea;
+$darkblue: #4a4eee;
+$text-color: #d5e1ef;
+
+/* #endregion */
