--- a/components/grid-view/grid-view.module.scss
+++ b/components/grid-view/grid-view.module.scss
@@ -1,14 +1,19 @@
+@import '../../styles/mixins.scss';
+
 .row {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+
+	@include bp-tablet-max {
+		justify-content: center;
+	}
 }
 
 .tile {
 	margin: 5px;
 	min-width: 200px;
-	height: 130px;
-	background-color: #91a3b0;
+	height: 350px;
+	// background-color: #91a3b0;
 	color: white;
 	font-size: 20px;
 	transition: transform 500ms, opacity 500ms;
@@ -17,7 +22,7 @@
 }
 
 .overlay {
-	background-color: #91a3b0;
+	// background-color: #91a3b0;
 	width: 100%;
 	height: 100%;
 	opacity: 0;
@@ -28,7 +33,7 @@
 }
 
 .tile:hover {
-	transform: scale(1.5);
+	transform: scale(1.2);
 }
 
 .tile:hover .overlay {
