added yarn lock

--- a/components/articles-list/article-card/article-card.module.scss
+++ b/components/articles-list/article-card/article-card.module.scss
@@ -4,6 +4,7 @@
 	width: 250px;
 	background-image: $bg-shape-color;
 	overflow: hidden;
+	cursor: pointer;
 }
 .overviewInfo,
 .productSpecifications {
