--- a/components/article-details/article-details.module.scss
+++ b/components/article-details/article-details.module.scss
@@ -32,5 +32,13 @@
 		padding: 10px 20px;
 		font-weight: bold;
 		cursor: pointer;
+		width: 75px;
+		height: 40px;
+		display: flex;
+		align-items: center;
+
+		&:disabled {
+			opacity: 0.5;
+		}
 	}
 }
