--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,3 +26,15 @@ a {
 .drawer-content {
 	background: #f1f3f4;
 }
+
+.Toastify__toast {
+	z-index: 1000;
+}
+
+.drawer-right {
+	z-index: 10;
+}
+
+.drawer {
+	z-index: 20 !important;
+}
