--- a/components/article-details/article-details.module.scss
+++ b/components/article-details/article-details.module.scss
@@ -24,15 +24,13 @@
 		text-align: left;
 	}
 
-	.drawer-submit-button {
+	.drawer-btn {
 		margin: 0 24px;
-		background: #9500ae;
-		border: none;
-		color: white;
+
 		padding: 10px 20px;
 		font-weight: bold;
 		cursor: pointer;
-		width: 75px;
+		width: 80px;
 		height: 40px;
 		display: flex;
 		align-items: center;
@@ -40,5 +38,29 @@
 		&:disabled {
 			opacity: 0.5;
 		}
+	}
+
+	.drawer-btn {
+		margin: 0 24px;
+
+		padding: 10px 20px;
+		font-weight: bold;
+		cursor: pointer;
+		width: 80px;
+		height: 40px;
+		display: flex;
+		align-items: center;
+
+		&:disabled {
+			opacity: 0.5;
+		}
+	}
+
+	.drawer-save-button {
+		margin-right: 10px;
+	}
+
+	.drawer-delete-button {
+		margin-left: 0px;
 	}
 }
