--- a/components/failed-to-fetch/failed-to-fetch.module.scss
+++ b/components/failed-to-fetch/failed-to-fetch.module.scss
@@ -1,8 +1,10 @@
+@import '../../styles/variables.scss';
+
 .failed-to-fetch-warning {
 	padding: 20px;
-	background: #007bb2;
+	background: lighten($color-brand-secondary-dark, 40%);
 	margin-top: 15px;
-	color: white;
+	color: #9500ae;
 	font-size: 1.2rem;
 	font-weight: bold;
 	border: 1px solid #9500ae;
