removed unnecessary styles.

--- a/styles/drawer.scss
+++ b/styles/drawer.scss
@@ -194,3 +194,7 @@
 .drawer.drawer-open .drawer-handle-icon:after {
 	transform: translateY(-5px) rotate(-45deg);
 }
+
+.drawer-content {
+	background: #f1f3f4;
+}
