--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,6 +11,9 @@ $color-brand-secondary-contrastText: #dd33fa;
 
 //font
 $font-product-sans: 'Product Sans', Arial, Helvetica, sans-serif;
+$font-helvetica-neue: 'Helvetica Neue', 'Helvetica', Helvetica, Arial,
+	sans-serif;
+$font-roboto: Roboto, Helvetica Neue, sans-serif;
 
 /* #region BREAK POINTS */
 
