--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,8 +6,15 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: $font-helvetica-neue;
+}
+
+button,
+html,
+input,
+select,
+textarea {
+	font-family: $font-roboto;
 }
 
 a {
@@ -17,14 +24,6 @@ a {
 
 * {
 	box-sizing: border-box;
-}
-
-// main {
-// 	background: #f1f3f4;
-// }
-
-.drawer-content {
-	background: #f1f3f4;
 }
 
 .Toastify__toast {
